clusters/shire/apps/quizmon/release/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: quizmon-sync
  namespace: quizmon
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`quizmon-sync.raveh.dev`) && (PathPrefix(`/players/`) || PathPrefix(`/rounds/`) || Path(`/health`))
      kind: Rule
      services:
        - name: online-quizmon-sync
          port: 8080
